--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
 		<section class="main">
 			<h2>Hello!!</h2>
 			<p>안녕하세요 :) OPNay 입니다.<br>현재 준비중인 곳이며 추후 블로그, 포트폴리오 등 각종 페이지를 열게될 예정입니다.</p>
+			<p>현재 저는 <a href="http://opnay.tistory.com/">티스토리 블로그</a>를 운영중이며 해당 블로그는 이곳의 공사가 전부 끝나면 폐쇠 및 이주할 예정입니다.</p>
+			<p>기존 티스토리 블로그에 올린 자료들은 전부 이주할 예정이며 다운로드등을 편하게 할 수 있도록 MEGA, 구글 드라이브 등의 클라우드 서비스가 아닌 직접 서버를 열어 보여드리도록 하겠습니다. :)</p>
 		</section>
 	</body>
 </html>
