--- a/index.html
+++ b/index.html
@@ -23,7 +23,12 @@
 
 	</head>
 	<body>
-		<section class="icons flex">
+        <section class="list flex vertical">
+            <a class="link tistory" href="http://blog.opnay.com"><img class="icon" src="./image/tistory.svg" alt="Tistory" /> 티스토리 블로그</a>
+            <a class="link" href="#"><img class="icon" src="./image/application.svg" alt="Application" /> 애플리케이션(준비중..)</a>
+        </section>
+<!--
+        <section class="icons flex">
 			<a class="icons-element blog" href="http://blog.opnay.com">
 				<div class="icons-img"><img src="./image/tistory.svg" alt="Tistory"/></div>
 				<div class="icons-info flex"><p class="title">티스토리 블로그</p></div>
@@ -33,5 +38,6 @@
 				<div class="icons-info flex"><p class="title">준비중</p></div>
 			</a>
 		</section>
+-->
 	</body>
 </html>
