Contenst align center

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		</script>
 
 	</head>
-	<body>
+	<body class="flex center">
         <section class="list flex vertical">
             <a class="link tistory" href="http://blog.opnay.com"><img class="icon" src="./image/tistory.svg" alt="Tistory" /> 티스토리 블로그</a>
             <a class="link" href="#"><img class="icon" src="./image/application.svg" alt="Application" /> 애플리케이션(준비중..)</a>
