--- a/index.html
+++ b/index.html
@@ -1,43 +1,8 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<meta charset="utf-8" />
-		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
-		<title>OPNay's Lab</title>
-		<link rel="stylesheet" href="css/index.css">
-		<link rel="stylesheet" href="https://fonts.googleapis.com/earlyaccess/notosanskr.css" />
-		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
+---
+layout: default
+---
 
-		<!-- Verification -->
-		<meta name="naver-site-verification" content="f7309447c068e3ff9e40fcbf6d8cbff429d6ae96"/>
-		<script>
-		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-		(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-		m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-		})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-		ga('create', 'UA-68430622-3', 'auto');
-		ga('send', 'pageview');
-		</script>
-
-	</head>
-	<body class="flex center">
-        <section class="list flex vertical">
-            <a class="link tistory" href="http://blog.opnay.com"><img class="icon" src="./image/tistory.svg" alt="Tistory" /> 티스토리 블로그</a>
-            <a class="link" href="#"><img class="icon" src="./image/application.svg" alt="Application" /> 애플리케이션(준비중..)</a>
-        </section>
-<!--
-        <section class="icons flex">
-			<a class="icons-element blog" href="http://blog.opnay.com">
-				<div class="icons-img"><img src="./image/tistory.svg" alt="Tistory"/></div>
-				<div class="icons-info flex"><p class="title">티스토리 블로그</p></div>
-			</a>
-			<a class="icons-element app" href="#">
-				<div class="icons-img"><img src="./image/application.svg" alt="Application"/></div>
-				<div class="icons-info flex"><p class="title">준비중</p></div>
-			</a>
-		</section>
--->
-	</body>
-</html>
+<section class="list flex vertical">
+	<a class="link tistory" href="http://blog.opnay.com"><img class="icon" src="./image/tistory.svg" alt="Tistory" /> 티스토리 블로그</a>
+	<a class="link" href="#"><img class="icon" src="./image/application.svg" alt="Application" /> 애플리케이션(준비중..)</a>
+</section>
