--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 <section class="wrapper flex center">
-	<section class="list flex vertical">
+	<section class="list card flex vertical">
 		<div class="dday progress">
 				<div class="progress-bar"></div>
 				<p class="progress-text"></p>
@@ -18,8 +18,6 @@ layout: default
 .wrapper hr {margin:0;}
 .wrapper .link {color:#212121; text-decoration:none; padding:16px;}
 .wrapper .link:hover {background:#EEE;}
-
-.list {background:#FFF; border-radius:2px; box-shadow:0 1px 2px rgba(0,0,0,0.3);}
 
 .dday.progress {position:relative; margin:18px; width:calc(100% - 36px); height:28px;}
 .dday.progress .progress-bar {width:0%; height:100%; transition:width 500ms ease-out;}
