--- a/index.html
+++ b/index.html
@@ -3,9 +3,15 @@ layout: default
 ---
 <section class="wrapper flex center">
 	<section class="list card flex vertical">
-		<div class="dday progress">
+		<div class="dday">
+			<div class="progress">
 				<div class="progress-bar"></div>
 				<p class="progress-text"></p>
+			</div>
+			<div class="info">
+				<p>군 복무 기간 : 2015.12.08 ~ 2017.12.07</p>
+				<p>제대일까지 : <span class="dday-text"></span></p>
+			</div>
 		</div>
 		<hr>
 		<a class="link tistory" href="http://blog.opnay.com"><img class="icon" src="./image/tistory.svg" alt="Tistory" /> 티스토리 블로그</a>
@@ -19,11 +25,13 @@ layout: default
 .wrapper .link {color:#212121; text-decoration:none; padding:16px;}
 .wrapper .link:hover {background:#EEE;}
 
-.dday.progress {position:relative; margin:18px; width:calc(100% - 36px); height:28px;}
-.dday.progress .progress-bar {width:0%; height:100%; transition:width 500ms ease-out;}
-.dday.progress .progress-text {margin:-28px 0 0 0; width:100%; line-height:1.75; color:white; text-align:center; font-weight:bold;}
+.dday {padding:0 18px;}
+.dday .progress {position:relative; margin:18px 0; width:100%; height:28px;}
+.dday .progress .progress-bar {width:0%; height:100%; transition:width 500ms ease-out;}
+.dday .progress .progress-text {margin:-28px 0 0 0; width:100%; line-height:1.75; color:white; text-align:center; font-weight:bold;}
+.dday .info {margin:16px 0; line-height:1.75; font-size:14px;}
+.dday .info p {margin:0;}
 
 .progress {background:#BBDEFB;}
 .progress .progress-bar {background:#2196F3;}
-
 </style>
