js: use root directory

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ layout: default
 		<a class="link" href="#"><img class="icon" src="./image/application.svg" alt="Application" /> 애플리케이션(준비중..)</a>
 	</section>
 </section>
-<script type="text/javascript" src="js/dday.js"></script>
+<script type="text/javascript" src="/js/dday.js"></script>
 <style>
 .wrapper {background:#EEE; position:absolute; top:0; bottom:0; width:100%;}
 .wrapper hr {margin:0;}
