index: Fix width on default layout when desktop

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ layout: default
 </section>
 <script type="text/javascript" src="/js/dday.js"></script>
 <style>
-.wrapper {background:#EEE; position:absolute; top:0; bottom:0; width:100%;}
+.wrapper {background:#EEE; width:100%; min-height:100%;}
 .wrapper hr {margin:0;}
 .wrapper .link {color:#212121; text-decoration:none; padding:16px;}
 .wrapper .link:hover {background:#EEE;}
