index: Remove '.wrapper'

--- a/index.html
+++ b/index.html
@@ -1,15 +1,13 @@
 ---
 layout: default
 ---
-<section class="wrapper flex center">
-	<section class="list card flex vertical">
-		<a class="link tistory" href="http://blog.opnay.com"><img class="icon" src="./image/tistory.svg" alt="Tistory" /> 티스토리 블로그</a>
-		<a class="link" href="#"><img class="icon" src="./image/application.svg" alt="Application" /> 애플리케이션(준비중..)</a>
-	</section>
+<section class="list flex vertical">
+	<a class="link tistory" href="http://blog.opnay.com"><img class="icon" src="./image/tistory.svg" alt="Tistory" /> 티스토리 블로그</a>
+	<a class="link" href="#"><img class="icon" src="./image/application.svg" alt="Application" /> 애플리케이션(준비중..)</a>
 </section>
 <style>
-.wrapper {background:#EEE; width:100%; min-height:100%;}
-.wrapper hr {margin:0;}
-.wrapper .link {color:#212121; text-decoration:none; padding:16px;}
-.wrapper .link:hover {background:#EEE;}
+.list {width:100%}
+.list .link {color:#212121; text-decoration:none; padding:16px;}
+.list .link:hover {background:#EEE;}
+.icon {margin-right:8px; width:64px; height:auto; vertical-align:middle;}
 </style>
