layouts: default: Switch '.dday' and link list in index.html

--- a/index.html
+++ b/index.html
@@ -1,13 +1,9 @@
 ---
 layout: default
 ---
-<section class="list flex vertical">
-	<a class="link tistory" href="http://blog.opnay.com"><img class="icon" src="./image/tistory.svg" alt="Tistory" /> 티스토리 블로그</a>
-	<a class="link" href="#"><img class="icon" src="./image/application.svg" alt="Application" /> 애플리케이션(준비중..)</a>
-</section>
+<div class="card">
+	{% include dday.html %}
+</div>
 <style>
-.list {width:100%}
-.list .link {color:#212121; text-decoration:none; padding:16px;}
-.list .link:hover {background:#EEE;}
-.icon {margin-right:8px; width:64px; height:auto; vertical-align:middle;}
+	.card {margin:18px auto; padding:18px; width:640px;}
 </style>
