index: Add twitter widget

--- a/index.html
+++ b/index.html
@@ -4,3 +4,7 @@ layout: default
 <div class="card">
 	{% include dday.html %}
 </div>
+<div class="card twitter">
+	<a class="twitter-timeline" data-height="640" href="https://twitter.com/opnay_dev">Tweets by opnay_dev</a>
+	<script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+</div
