index: twitter: Add follow buttton

--- a/index.html
+++ b/index.html
@@ -6,5 +6,7 @@ layout: default
 </div>
 <div class="card twitter">
 	<a class="twitter-timeline" data-height="640" href="https://twitter.com/opnay_dev">Tweets by opnay_dev</a>
+	<a class="twitter-follow-button" href="https://twitter.com/opnay_dev" data-size="large">Follow @OPNay_dev</a>
 	<script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
-</div
+	<style>.card.twitter {text-align:right;}</style>
+</div>
