layouts: base: Page Title use 'page.title'

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 ---
-layout: default
+layout: "default"
+title: "OPNay's Lab"
 ---
 <div class="card dday item">
 	<script type="text/javascript" defer src="/js/dday.js"></script>
