layouts: default: Theme color use page.theme(page variable)

--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 ---
 layout: "default"
 title: "OPNay's Lab"
+theme:
+    primary: "#2196F3"
+    secondary: "#B3E5FC"
 ---
 <div class="card dday item">
 	<script type="text/javascript" defer src="/js/dday.js"></script>
 	<div class="progress">
-		<div class="progress-bar"></div>
+		<div class="progress-bar bg-s"></div>
 		<p class="progress-text"></p>
 	</div>
 	<div class="info">
@@ -18,8 +21,7 @@ title: "OPNay's Lab"
 .dday .progress .progress-text {margin-top:-28px; width:100%; line-height:28px; color:white; text-align:center; font-weight:bold;}
 .dday .info {margin:16px 0 0; line-height:1.75; font-size:14px;}
 
-.dday .progress {background:#BBDEFB;}
-.dday .progress .progress-bar {background:#2196F3;}
+.dday .progress {background:#EEE;}
 	</style>
 </div>
 <div class="card twitter">
