--- a/app/index.html
+++ b/app/index.html
@@ -1,5 +1,9 @@
 ---
-layout: default
+layout: "default"
+title: "Applications"
+theme:
+    primary: "#2196F3"
+    secondary: "#B3E5FC"
 ---
 <div class="card">
 	<h1 class="title">페이지가 없습니다.</h1>
