--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ theme:
 	<script type="text/javascript" defer src="/js/dday.js"></script>
 	<div class="progress">
 		<div class="progress-bar bg-s"></div>
-		<p class="progress-text"></p>
+		<p class="progress-text ft-white"></p>
 	</div>
 	<div class="info">
 		<p>군 복무 기간 : 2015.12.08 ~ 2017.9.07</p>
@@ -18,7 +18,7 @@ theme:
 	<style>
 .dday .progress {width:100%; height:28px;}
 .dday .progress .progress-bar {width:0%; height:100%; transition:width 500ms;}
-.dday .progress .progress-text {margin-top:-28px; width:100%; line-height:28px; color:white; text-align:center; font-weight:bold;}
+.dday .progress .progress-text {margin-top:-28px; width:100%; line-height:28px; text-align:center; font-weight:bold;}
 .dday .info {margin:16px 0 0; line-height:1.75; font-size:14px;}
 
 .dday .progress {background:#EEE;}
