index: Add contact

--- a/index.html
+++ b/index.html
@@ -24,6 +24,12 @@ theme:
 .dday .progress {background:#EEE;}
 	</style>
 </div>
+<div class="card contact">
+	<p style="margin-bottom:24px; font-size:24px; font-weight:bold;">문의는 SNS 및 이메일로 해주시기 바랍니다.</p>
+	<p>이메일 : <a href="mailto:opnayn@gmail.com">opnayn@gmail.com</a></p>
+	<p>SNS : <a href="https://facebook.com/opnay">Facebook</a>, <a href="https://twitter.com/opnay_dev">Twitter</a>, <a href="https://plus.google.com/107296541638373404997">Google+</a></p>
+	<p>저장소 : <a href="https://github.com/opnay">Github</a>, <a href="https://bitbucket.org/opnay">Bitbucket</a></p>
+</div>
 <div class="card twitter">
 	<a class="twitter-timeline" data-height="640" href="https://twitter.com/opnay_dev">Tweets by opnay_dev</a>
 	<a class="twitter-follow-button" href="https://twitter.com/opnay_dev" data-size="large">Follow @OPNay_dev</a>
