app: Add Digital Clock - Image Source 'Adam Kool' (https://unsplash.com/?photo=ndN00KmbJ1c)

--- a/app/index.html
+++ b/app/index.html
@@ -10,8 +10,14 @@ theme:
 	<p class="date ft-dark-sec">2017.06.10</p>
 	<p class="desc ft-dark-sec">HTML, CSS, jQuery로만 만들어진 간단한 계산기입니다.</p>
 </a>
+<a class="card ft-dark" href="/app/clock/">
+	<div class="title">디지털 시계<span class="category ft-dark-sec right">WebApp</span></div>
+	<p class="date ft-dark-sec">2017.06.28</p>
+	<p class="desc ft-dark-sec">HTML, CSS, jQuery로 만들어진 디지털 시계입니다.<br>네이버 Whale 브라우저의 새 탭 페이지를 참고하여 만들었으며, 배경화면은 <span class="accent">unsplash</span>에 공개된 사진을 사용했습니다.</p>
+</a>
 <style>
 	.card:hover {z-index:1000; text-decoration:none; box-shadow:0 0 8px rgba(0,0,0,0.24), 0 8px 8px rgba(0,0,0,0.24)}
-	.card .title {margin:0 0 16px; font-size:36px;}
-	.card .category {font-size:18px;}
+	.card .title {margin:0 0 16px; font-size:2em;}
+	.card .category {line-height:1; font-size:18px;}
+	.card .desc {margin-top:8px; line-height:1.25; font-size:0.9em;}
 </style>
