app: Add last edit date

--- a/app/index.html
+++ b/app/index.html
@@ -12,7 +12,7 @@ theme:
 </a>
 <a class="card ft-dark" href="/app/clock/">
 	<div class="title">디지털 시계<span class="category ft-dark-sec right">WebApp</span></div>
-	<p class="date ft-dark-sec">2017.06.28</p>
+	<p class="date ft-dark-sec">2017.06.28 (마지막 수정 : 2017.06.29)</p>
 	<p class="desc ft-dark-sec">HTML, CSS, jQuery로 만들어진 디지털 시계입니다.<br>네이버 Whale 브라우저의 새 탭 페이지를 참고하여 만들었으며, 배경화면은 <span class="accent">unsplash</span>에 공개된 사진을 사용했습니다.</p>
 </a>
 <style>
