--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ theme:
 	<script type="text/javascript" defer src="/js/dday.js"></script>
 	<div class="progress">
 		<div class="progress-bar bg-s"></div>
-		<p class="progress-text ft-dark-sec"></p>
+		<p class="progress-text ft-black-sec"></p>
 	</div>
 	<div class="info">
 		<p>군 복무 기간 : 2015.12.08 ~ 2017.9.07</p>
