index: Update dday

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@ theme:
 			<p class="progress-text ft-black-sec"></p>
 		</div>
 		<div class="info">
-			<p>군 복무 기간 : 2015.12.08 ~ 2017.9.07</p>
-			<p>제대일까지 : <span class="dday-text"></span></p>
+			<p><strong>군 복무 기간</strong> : 2015.12.08 ~ 2017.9.07</p>
+			<p><strong>제대까지 남은 기간</strong> : <span class="dday-text"></span></p>
 		</div>
 		<style>
 .dday .progress {width:100%; height:28px;}
