theme: Add light and dark theme color

--- a/app/calculator/index.html
+++ b/app/calculator/index.html
@@ -2,8 +2,14 @@
 layout: base
 title: "Calculator"
 theme:
-    primary: "#4caf50"
-    secondary: "#9ccc65"
+    primary:
+        main: "#4caf50"
+        light: "#80e27e"
+        dark: "#087f23"
+    secondary:
+        main: "#9ccc65"
+        light: "#cfff95"
+        dark: "#6b9b37"
 ---
 <div class="wrap bg-gray flex-1">
 	<div class="content flex vertical">
