--- a/index.html
+++ b/index.html
@@ -2,8 +2,14 @@
 layout: "default"
 title: "OPNay's Lab"
 theme:
-    primary: "#2196F3"
-    secondary: "#B3E5FC"
+    primary:
+        main: "#2196F3"
+        light: "#6ec6ff"
+        dark: "#0069c0"
+    secondary:
+        main: "#03a9f4"
+        light: "#67daff"
+        dark: "#007ac1"
 ---
 <section class="section dday">
 	<div class="card">
