--- a/index.html
+++ b/index.html
@@ -13,25 +13,24 @@ theme:
 ---
 <section class="section dday">
 	<div class="card">
+		<header class="bg-s-d ft-white">주인은 군대에 있습니다.</header>
+		<article>
+			<div class="progress">
+				<div class="progress-bar bg-s"></div>
+			</div>
+			<div class="info">
+				<p>2015.12.08 ~ 2017.09.07<span class="dday-text right"></span></p>
+			</div>
+		</article>
 		<script type="text/javascript" defer src="/js/dday.js"></script>
-		<div class="progress">
-			<div class="progress-bar bg-s"></div>
-			<p class="progress-text ft-black-sec"></p>
-		</div>
-		<div class="info">
-			<p><strong>군 복무 기간</strong> : 2015.12.08 ~ 2017.9.07</p>
-			<p><strong>제대까지 남은 기간</strong> : <span class="dday-text"></span></p>
-		</div>
-		<style>
-.dday .card {padding:16px;}
-.dday .progress {width:100%; height:28px;}
-.dday .progress .progress-bar {width:0%; height:100%; transition:width 500ms;}
-.dday .progress .progress-text {margin-top:-28px; width:100%; line-height:28px; text-align:center; font-weight:bold;}
-.dday .info {margin:16px 0 0; line-height:1.75; font-size:14px;}
+	</div>
+	<style>
+.dday .progress {width:100%; height:12px;}
+.dday .progress .progress-bar {width:0%; height:100%; transition:width 500ms ease-in;}
+.dday .info {padding:16px; line-height:1.75; font-size:14pt;}
 
 .dday .progress {background:#EEE;}
-		</style>
-	</div>
+	</style>
 </section>
 <section class="section kernel">
 	<div class="card">
