index: Update contact

--- a/index.html
+++ b/index.html
@@ -47,15 +47,14 @@ theme:
 </section>
 <section class="section contact">
 	<div class="card">
-		<p class="title">문의는 SNS 및 이메일로 해주시기 바랍니다.</p>
-		<p>이메일 : <a href="mailto:opnayn@gmail.com">opnayn@gmail.com</a></p>
-		<p>SNS : <a href="https://facebook.com/opnay">Facebook</a>, <a href="https://plus.google.com/107296541638373404997">Google+</a></p>
-		<p>저장소 : <a href="https://github.com/opnay">Github</a>, <a href="https://bitbucket.org/opnay">Bitbucket</a></p>
+		<header class="bg-s-d ft-white">문의는 SNS 및 이메일로 해주시기 바랍니다.</header>
+		<article>
+			<p>이메일 : <a href="mailto:opnayn@gmail.com">opnayn@gmail.com</a></p>
+			<p>SNS : <a href="https://facebook.com/opnay">Facebook</a>, <a href="https://plus.google.com/107296541638373404997">Google+</a></p>
+			<p>저장소 : <a href="https://github.com/opnay">Github</a>, <a href="https://bitbucket.org/opnay">Bitbucket</a></p>
+		</article>
 	</div>
-	<style>
-		.contact .card {padding:18px;}
-		.desktop .contact .card {padding:24px;}
-	</style>
+	<style>.contact article {padding:16px; font-size:14pt;}</style>
 </section>
 <style>
 .card .title {margin-bottom:16px; font-size:1.5em;}
