includes: html: Add jquery

--- a/app/clock/index.html
+++ b/app/clock/index.html
@@ -7,7 +7,7 @@ title: "Digital Clock"
 		{% include html/head.html %}
 		<link rel="stylesheet" href="/fonts/roboto.css">
 
-		<script type="text/javascript" src="/js/jquery-3.2.1.min.js"></script>
+		{% include html/jquery.html %}
 		{% include verification.html %}
 		
 		<style>
