app: shutdown: Rename title.

--- a/app/shutdown/index.html
+++ b/app/shutdown/index.html
@@ -1,6 +1,6 @@
 ---
 layout: "default"
-title: "Applications"
+title: "System Shutdown"
 theme:
     primary:
         main: "#2196F3"
@@ -13,7 +13,7 @@ theme:
 ---
 <section class="section item">
 	<div class="card ft-black">
-		<div class="title">컴퓨터 예약종료<span class="category ft-black-sec right">Windows</span></div>
+		<div class="title">시스템 예약종료<span class="category ft-black-sec right">Windows</span></div>
 		<article class="article">
 			<p class="image">
 				<img src="img/1.png"/>
