--- a/404.html
+++ b/404.html
@@ -1,5 +1,6 @@
 ---
 permalink: /404.html
+image_number: 4
 ---
 <!DOCTYPE html>
 <html lang="en">
@@ -7,16 +8,14 @@ permalink: /404.html
 		<title>Page not found :(</title>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
+        {% include html/jquery.html %}
 		<style>
 html, body {margin:0; padding:0; width:100%; height:100%; font-family:"roboto", "arial";}
-.body {background:url(/image/404.jpg); background-size:cover; background-repeat:no-repeat; justify-content:center; item-align:center;}
+.body {background-size:cover; background-repeat:no-repeat; justify-content:center; item-align:center;}
 .body:before {content:''; background:rgba(0,0,0,0.5); position:fixed; display:block; width:100%; height:100%;}
 .article {position:absolute; top:50%; width:100%; transform:translateY(-50%); text-align:center; color:white;}
 .article h1 {margin:0; font-size:6em;}
 .article p {margin:0; font-size:2em;}
-
-.src {position:absolute; bottom:1em; left:1em; color:white; font-size:0.9em; text-decoration:none;}
-.src:hover {text-decoration:underline;}
 		</style>
 	</head>
 	<body class="body">
@@ -24,6 +23,10 @@ html, body {margin:0; padding:0; width:100%; height:100%; font-family:"roboto", 
 			<h1>404 Error!</h1>
 			<p>Page was not found! :(</p>
 		</div>
-		<a class="src" href="https://unsplash.com/photos/yfKKT7XlyBA">Photo by Ricky Kharawala</a>
+        <script>
+            (function($){
+                $('body').css('background-image', 'url("/image/404/' + ($.now() % {{ page.image_number }}) + '.jpg")');
+            })(jQuery);
+        </script>
 	</body>
 </html>
