theme: Remove secondary color

--- a/app/calculator/index.html
+++ b/app/calculator/index.html
@@ -6,14 +6,10 @@ theme:
         main: "#4caf50"
         light: "#80e27e"
         dark: "#087f23"
-    secondary:
-        main: "#9ccc65"
-        light: "#cfff95"
-        dark: "#6b9b37"
 ---
 <div class="wrap bg-gray flex-1">
 	<div class="content flex vertical">
-		<div class="display flex vertical bg-s ft-white">
+		<div class="display flex vertical bg-p ft-white">
 			<div class="equation flex-1"></div>
 			<div class="result">=</div>
 		</div>
