--- a/index.html
+++ b/index.html
@@ -6,14 +6,10 @@ theme:
         main: "#2196F3"
         light: "#6ec6ff"
         dark: "#0069c0"
-    secondary:
-        main: "#03a9f4"
-        light: "#67daff"
-        dark: "#007ac1"
 ---
 <section class="section kernel">
 	<div class="card">
-		<header class="bg-s-d ft-white">커널 목록</header>
+		<header class="bg-p-d ft-white">커널 목록</header>
 		{% for item in site.data.kernel %}
 		<a class="item ft-black" href="{{ item.href }}">
 			<p class="title">{{ item.name }}<span class="ft-black-sec right">{{ item.version }}</span></p>
@@ -32,7 +28,7 @@ theme:
 </section>
 <section class="section contact">
 	<div class="card">
-		<header class="bg-s-d ft-white">문의는 SNS 및 이메일로 해주시기 바랍니다.</header>
+		<header class="bg-p-d ft-white">문의는 SNS 및 이메일로 해주시기 바랍니다.</header>
 		<article>
 			<p>이메일 : <a href="mailto:opnayn@gmail.com">opnayn@gmail.com</a></p>
 			<p>SNS : <a href="https://facebook.com/opnay">Facebook</a>, <a href="https://plus.google.com/107296541638373404997">Google+</a></p>
