Convert font-size to rem

--- a/app/index.html
+++ b/app/index.html
@@ -17,9 +17,9 @@ theme:
 </section>
 {% endfor %}
 <style>
-	.section .card {display:block; padding:16px; transition:box-shadow 200ms;}
+	.section .card {display:block; padding:16px; transition:box-shadow 200ms; font-size:0.8rem;}
 	.card:hover {text-decoration:none; box-shadow:0 0 8px rgba(0,0,0,0.24), 0 8px 8px rgba(0,0,0,0.24)}
-	.card .title {margin:0 0 16px; font-size:2em;}
-	.card .category {line-height:1; font-size:18px;}
-	.card .desc {margin-top:8px; line-height:1.25; font-size:0.9em;}
+	.card .title {margin:0 0 0.4rem; font-size:1.4rem; line-height:1.2;}
+	.card .category {line-height:1; font-size:0.9rem;}
+	.card .desc {margin-top:8px;}
 </style>
