--- a/app/shutdown/index.html
+++ b/app/shutdown/index.html
@@ -9,7 +9,7 @@ theme:
 ---
 <section class="section item">
 	<div class="card ft-black">
-		<div class="title">시스템 예약종료<span class="category ft-black-sec right">Windows</span></div>
+		<h1 class="title">시스템 예약종료<span class="category ft-black-sec right">Windows</span></h1>
 		<article class="article">
 			<p class="image">
 				<img src="img/1.png"/>
@@ -30,9 +30,9 @@ theme:
 </section>
 <style>
 	.section .card {display:block;}
-	.card .title {padding:16px; font-size:2em;}
-	.card .category {line-height:1; font-size:18px;}
-	.article {padding:16px; font-size:14pt;}
+	.card .title {margin:0; padding:16px;}
+	.card .category {line-height:1; font-size:0.9rem;}
+	.article {padding:16px; font-size:0.8rem;}
 	.article ul {margin:16px 0;}
 	.article p {margin:8px 0;}
 	.article h3 {border-bottom:1px solid rgba(0,0,0,0.12);}
@@ -41,7 +41,7 @@ theme:
 		background:#03A9F4; position:relative;
 		display:inline-block; margin:8px 0; padding:0 16px 0 64px;
 		border-radius:2px; height:48px; line-height:48px;
-		overflow:hidden; font-size:14pt; color:white;
+		overflow:hidden; font-size:0.8rem; color:white;
 		box-shadow:0 0 4px rgba(0,0,0,0.3); transition:box-shadow 200ms;
 	}
 	.article .file:hover {text-decoration:none; box-shadow:0 0 8px rgba(0,0,0,0.6);}
