--- a/404.html
+++ b/404.html
@@ -14,8 +14,8 @@ html, body {margin:0; padding:0; width:100%; height:100%; font-family:"roboto", 
 .body {background-size:cover; background-repeat:no-repeat; justify-content:center; item-align:center;}
 .body:before {content:''; background:rgba(0,0,0,0.5); position:fixed; display:block; width:100%; height:100%;}
 .article {position:absolute; top:50%; width:100%; transform:translateY(-50%); text-align:center; color:white;}
-.article h1 {margin:0; font-size:6em;}
-.article p {margin:0; font-size:2em;}
+.article h1 {margin:0; font-size:4rem;}
+.article p {margin:0; font-size:1.6rem;}
 		</style>
 	</head>
 	<body class="body">
