app: clock: Update font-size to rem

--- a/app/clock/index.html
+++ b/app/clock/index.html
@@ -14,15 +14,15 @@ title: "Digital Clock"
 .flex {display:-webkit-box; display:-webkit-flex; display:-ms-flex; display:flex;}
 .flex.center {justify-content:center; align-items:center;}
 
-html, body, .content {margin:0; padding:0; width:100%; height:100%; font-family:"roboto", "arial";}
+html, body, .content {margin:0; padding:0; width:100%; height:100%; font-family:"roboto", "arial"; font-size:16pt;}
 .body {background:url('./image/image.jpg'); background-size:cover; background-repeat:no-repeat;}
 .body:before {content:''; background:rgba(0,0,0,0.24); position:absolute; top:0; left:0; display:block; width:100%; height:100%;}
 
-.clock{position:relative; font-size:8em; color:white; text-shadow:4px 4px 8px rgba(0,0,0,0.48);}
-.num {margin:0 8px;}
-.period {font-size:0.5em;}
+.clock{position:relative; font-size:4rem; color:white; text-shadow:4px 4px 8px rgba(0,0,0,0.48);}
+.num {vertical-align:middle;}
+.period {font-size:2rem;}
 
-.src {position:absolute; bottom:1em; left:1em; color:white; font-size:0.9em; text-decoration:none;}
+.src {position:absolute; bottom:1em; left:1em; color:white; font-size:0.8rem; text-decoration:none;}
 .src:hover {text-decoration:underline;}
 		</style>
 	</head>
