index: Remove img tag bottom space

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ image_number: 6
         .card {margin:0; width:320px;}
         .card .block {padding:0.8rem;}
         .card.center {position:absolute; top:50%; left:50%; transform:translate(-50%, -50%); text-align:center;}
-        .card .profile {display:inline-block; margin-bottom:0.4rem; width:128px; height:128px; border-radius:50%;}
+        .card .profile {display:block; margin:0 auto 0.4rem; width:128px; height:128px; border-radius:50%;}
         .card .name {margin-bottom:0.8rem; font-size:1.6rem;}
         .card .social {justify-content:space-around;}
         .card .link {padding:0.4rem; text-align:left;}
