Don't use site.url

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ image_number: 6
 ---
 <section class="card center">
     <div class="block">
-        <img class="profile" src="{{ site.url }}/image/profile.jpg" />
+        <img class="profile" src="/image/profile.jpg" />
         <div class="name">OPNay</div>
         <div class="social flex">
             {% for social in site.data.social %}
